# MCP-Research-Copilot

./: .env.example  .gitignore  Dockerfile  README.md  deploy.sh  docker-compose.yml  main.py  mcp_share_price_server.py  pinecone-connect.py  pyproject.toml  requirements.txt  run_pinecone.py  run_share_price.py  setup_dev.sh
docs/: DEPLOYMENT.md
src/: __init__.py
src/config/: __init__.py  settings.py
src/mcp_servers/: __init__.py  pinecone_server.py  share_price_server.py
tests/: __init__.py  test_config.py
